# example-pytest-with-vscode

./: .gitignore  README.md  setup.cfg
.github/workflows/: python-app.yml
package/: hello.py  user.py
tests/sub1/: test_hello.py
tests/sub2/: test_hello.py
tests/sub3/: test_hello.py
