[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-mock
    pytest-xdist
    black
    flake8

[tool:pytest]
testpaths = tests
pythonpath = package

[flake8]
max-line-length = 80
max-complexity = 10
select = C,E,F,W,B,B950
extend-ignore = E203, E501
exclude =
    .git
    __pycache__
    .venv
    .history
